added some ML, ACI content

--- a/Semester 2/DML/DML_Formulas_and_Code.ipynb
+++ b/Semester 2/DML/DML_Formulas_and_Code.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +8,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -105,7 +103,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -330,7 +327,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -443,7 +439,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -536,20 +531,196 @@
     "    - data scientists : build predictive models\n",
     "    - BI developers : uses visualization tools to build dashboards and reports\n",
     "- micro pipeline : divide individual pipelines into smaller, reusable components\n",
-    "    - mentioned in this section, blah blah blah\n",
+    "    - some components are testing / tuning, production / monitoring, orchestration / automation, etc\n",
     "- testing data pipelines:\n",
     "    - development : data is fixed, code is changing\n",
-    "    - production : data is changing, code is fixed\n"
+    "    - production : data is changing, code is fixed\n",
+    "    - teams must test for both types of scenarios\n",
+    "    - types of test: \n",
+    "        1. data input tests : test data is valid, complete, and accurate\n",
+    "        2. business logic tests : test data matches business assumptions\n",
+    "        3. data output tests : output data is valid"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Data Ops\n",
+    "- emerging set of practices, processes and technologies for building and enhancing data pipelines to better meet business needs\n",
+    "- address the needs of data and analytics teams, and the business as a whole while building on concepts from software development and DevOps\n",
+    "    - like agile, lean and continuous integration and delivery (CI/CD)\n",
+    "- goals:\n",
+    "    - test automation\n",
+    "    - code repository \n",
+    "    - collaboration tools\n",
+    "    - orchestration framework\n",
+    "    - workflow automation\n",
+    "    - monitoring and alerting\n",
+    "- solutions to challenges:\n",
+    "    - complex data landscapes - analytics pipelines that streamline data flow across the organization\n",
+    "    - lack of agility - automation to free up time for innovation\n",
+    "    - growing number of reports and dashboards - self-service analytics\n",
+    "    - quickly respond to changing requirements - short cycles, fast feedback loops, data driven improvements\n",
+    "    - go from experimentation to production - CI/CD\n",
+    "    - alignment among teams - cross-functional teams, shared goals, shared metrics\n",
+    "- tools types:\n",
+    "    - all-in-one, orchestration, component, case-specific, open source tools\n",
+    "- benefits:\n",
+    "    - improve collaboration and communication\n",
+    "    - accelerate time to value\n",
+    "    - increase quality and reliability\n",
+    "- considerations:\n",
+    "    - keep it simple, non-technical\n",
+    "    - start small, iterate\n",
+    "- problems of traditional data stack:\n",
+    "    - long turn-around time to untangle and set up infrastructure\n",
+    "    - slow response to new information\n",
+    "    - expensive journey to insights\n",
+    "- solutions in modern data stack:\n",
+    "    - fully managed, cloud-based, plug and play, easy to use, off-the-shelf solutions, pay as you go\n",
+    "    - data transformation, data integration tools\n",
+    "    - BI tools, data visualization tools\n",
+    "    - goal is to analyze business data to proactively uncover new business opportunities, and make data-driven decisions\n",
+    "\n",
+    "<img src=\"https://i.imgur.com/oAZMqXG.png\" width=\"600\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
+    "\n",
+    "### Building blocks of DataOps\n",
+    "1. data ingestion : data is collected from various sources, and ingested into a data lake\n",
+    "    - data sources : databases, files, APIs, etc\n",
+    "    - data ingestion tools : Apache Kafka, Apache NiFi, etc\n",
+    "    - data ingestion patterns : batch, real-time, change data capture (CDC)\n",
+    "    - SAAS tools : FiveTran, Stitch, etc\n",
+    "    - open source tools : Singer, StreamSets, etc\n",
+    "    - custom pipelines built on orchestration tools : Apache Airflow, etc\n",
+    "2. data storage and processing : data is stored in a data lake, and processed using a data warehouse\n",
+    "    - data lake : stores raw data, eg. Amazon S3, Azure Data Lake, etc\n",
+    "    - data warehouse : stores processed data, eg. Amazon Redshift, Google BigQuery, Snowflake, etc\n",
+    "    - data lakehouse : stores both raw and processed data, eg. Databricks Delta Lake, Apache Iceberg, etc\n",
+    "3. data transformation : data is transformed and processed using a data transformation layer, two types:\n",
+    "    - with data warehouse : dbt, Matillion, etc\n",
+    "    - with orchestration engine : Apache Airflow, using a custom transformation in Python, R, or SQL\n",
+    "4. business intelligence and analytics : data is visualized and analyzed using a BI tool\n",
+    "    - explore data, rather than just consuming graphs and charts\n",
+    "    - eg. Looker, Mode, Redash, Sigma, Sisense, Superset, Tableau, etc\n",
+    "5. data cataloguing and governance : data is catalogued and governed using a data cataloguing and governance tool\n",
+    "    - SAAAS tools : Atlan, etc\n",
+    "    - open source tools : Apache Atlas, LinkedIn's DataHub, Lyft's Amundsen, etc\n",
+    "    - in-house tools : Airbnb's Dataportal, Facebook's Nemo, Uber's Databook, etc\n",
+    "6. data privacy and access governance : privacy controls and access governance are managed using a data privacy and access governance tool\n",
+    "    - SAAS services : Immuta, Okera, Privacera, etc\n",
+    "    - open source engines : Apache Ranger, etc\n",
+    "7. other tools : real-time data processing tools, data science tools, event collectors, etc\n",
+    "    - real-time data processing tools : \n",
+    "        1. real-time streaming pipelines : Confluent, Kafka, etc\n",
+    "        2. real-time analytics : Druid, Imply, etc\n",
+    "    - data science tools :\n",
+    "        1. preferred by data scientists : Jupyter Notebooks\n",
+    "        2. other options : Dataiku, DataRobot, Domino, SageMaker, etc\n",
+    "    - event collectors : to log and store external events, eg. Segment, Snowplow, etc\n",
+    "    - data quality tools : to monitor data quality, during profiling, business driven quality rules, etc\n",
+    "    - unit testing tools : to test data pipelines, eg. Great Expectations, etc\n",
+    "\n",
+    "### Key components of modern data infrastructure\n",
+    "1. diversity of data sources : data is ingested from many sources, eg. databases, APIs, logs, etc\n",
+    "    - typical for an analytics team to ingest data from source systems that are built and owned by the organization, as well as from third-party tools and vendors\n",
+    "2. ingestion interface and data structure : data is ingested from many interfaces, eg. REST API, database, flat files, etc\n",
+    "    - each interface and data structure presents its own challenges and opportunities\n",
+    "    - JSON from a REST API, well-structured data from a MySQL database, JSON within columns of a MySQL database table, semi-structured log data, CSV, fixed-width format (FWF), and other flat file formats, JSON in flat files, stream output from Kafka, etc\n",
+    "3. data storage : data is stored in a data lake, and processed using a data warehouse\n",
+    "4. data modeling : data is modeled using a data modeling tool, eg. dbt, etc\n",
+    "    - typically defined and written in SQL, and stored in a version control system\n",
+    "    - SQL preffered over a point-and-click interface, because it is easier to maintain, and can be versioned\n",
+    "5. workflow orchestration : data pipelines are orchestrated using a workflow orchestration tool, eg. Apache Airflow, etc\n",
+    "    - data pipelines are defined as DAGs (directed acyclic graphs), and scheduled to run at specific times\n",
+    "6. customizing data infrastructure : depending on the culture at the company, and the skillset of the team, the data infrastructure can be customized\n",
+    "    - eg. using a custom data modeling tool, or a custom workflow orchestration tool, etc\n",
+    "    - most important is understanding constraints (dollars, engineering resources, security, legal risk and compliance, etc) and tradeoffs (time to value, flexibility, etc)\n",
+    "\n",
+    "### Storage\n",
+    "<img src=\"https://i.imgur.com/mRNKJaz.png\" width=\"300\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
+    "- data storage is the foundation of any data architecture\n",
+    "- three concepts:\n",
+    "    1. storage abstraction : a logical view of data storage, eg. data lake, data warehouse, etc\n",
+    "    2. storage system : a physical implementation of a storage abstraction, HDFS, object storage, etc\n",
+    "    3. raw ingredients : the hardware and associated features that make up a storage system\n",
+    "\n",
+    "#### Raw ingredients of storage\n",
+    "- hardware : magnetic disk drive, solid-state drive, random access memory, networking and CPU\n",
+    "- associated features : serialization, compression, caching\n",
+    "- single machine vs distributed storage\n",
+    "- store data in a distributed fashion, to store, retrieve, and process data faster and at a larger scale, all while providing redundancy in case a server becomes unavailable\n",
+    "- coordination of multiple servers, eg: HDFS, object storage, Apache Spark, cloud data warehouses, etc\n",
+    "- file:\n",
+    "- data entity with specific read, write, and reference characteristics used by software and operating systems\n",
+    "- finite length, supports append operations, supports random access\n",
+    "- organized into a directory tree, metadata about the files and directories that it contains\n",
+    "- types:\n",
+    "1. local file storage : data is stored on a single machine, eg. local disk, etc\n",
+    "    - NTFS, ext4, etc are file systems that manage the organization of data on a disk\n",
+    "    - OS handles the details of reading and writing data to the disk\n",
+    "    - data is stored on a single machine, and is not distributed\n",
+    "2. network file storage : data is stored on a network, eg. NFS, SMB, etc\n",
+    "    - data is stored on a network, and is not distributed\n",
+    "    - NFS, SMB, etc are protocols that allow a client to access files over a network\n",
+    "    - peformance is limited by network bandwidth\n",
+    "    - advantages inclusind redundancy, scalability, and centralized management\n",
+    "    - fine grain access control, file sharing, etc\n",
+    "3. cloud file storage : data is stored in the cloud, eg. Amazon EFS, Azure Files, etc\n",
+    "    - provide fully managed, scalable, and highly available file storage\n",
+    "    - behave like NAS (network attached storage), but the details of managing the underlying infrastructure are abstracted away\n",
+    "4. block storage : raw storage volumes, eg. Amazon EBS, Azure Disks, etc\n",
+    "    - behave like a raw disk, but the details of managing the underlying infrastructure are abstracted away\n",
+    "    - virtual machines can be attached to block storage volumes, and the operating system can format the volume and manage the filesystem\n",
+    "    - allows fine control of storage capacity\n",
+    "5. object storage : data is stored as objects, eg. Amazon S3, Azure Blob Storage, etc\n",
+    "    - contains data of all shapes and sizes, eg. TXT, CSV, JSON, images, videos, audio, etc\n",
+    "    - data lakes generally sit on object stores\n",
+    "    - arguably one of the first \"serverless\" services, engineers don't need to consider the characteristics of underlying server clusters or disks\n",
+    "    - immutable, don't support random writes or append operations, instead they are written once as a stream of bytes\n",
+    "6. cache and memory based storage : data is stored in memory, eg. Memcached, Redis, etc\n",
+    "    - RAM offers excellent latency and transfer speeds but extremely vulnerable to data loss\n",
+    "    - RAM-based storage systems are generally focused on caching applications, presenting data for quick access and high bandwidth\n",
+    "    - data should generally be written to a more durable medium for retention purposes\n",
+    "    - these ultra-fast cache systems are useful when data engineers need to serve data with ultra-fast retrieval latency\n",
+    "    - Memcached and lightweight object caching\n",
+    "        - a key-value store designed for caching database query results, API call responses, and more\n",
+    "        - uses simple data structures, supporting either string or integer types\n",
+    "        - deliver results with very low latency while also taking the load off backend systems\n",
+    "    - Redis, memory caching with optional persistence\n",
+    "        - a key-value store, but it supports somewhat more complex data types (such as lists or sets)\n",
+    "        - with a typical configuration, Redis writes data roughly every two seconds\n",
+    "        - Redis is thus suitable for extremely high-performance applications but can tolerate a small amount of data loss\n",
+    "7. HDFS : data is a distributed file system that stores data on commodity hardware\n",
+    "    - designed to store large files, and is optimized for sequential reads and writes\n",
+    "    - does not support random writes or appends\n",
+    "    - designed to be fault-tolerant, and is optimized for throughput rather than latency\n",
+    "    - designed to be used with MapReduce\n",
+    "    - management:\n",
+    "        - NameNode : stores metadata about the files and directories that it contains\n",
+    "        - DataNode : stores the actual data\n",
+    "        - Secondary NameNode : periodically merges the edits from the NameNode into a new snapshot\n",
+    "    - data is stored in blocks, and each block is replicated to multiple DataNodes\n",
+    "8. streaming storage : data is stored in a distributed streaming platform, eg. Apache Kafka, etc\n",
+    "    - designed to retain and replay data streams\n",
+    "    - retention : data is retained for a certain duration, and then deleted\n",
+    "        - Kafka and competitors now support extremely long-duration streaming data retention\n",
+    "    - replay : allows a streaming system to return a range of historical stored data\n",
+    "        - standard data-retrieval mechanism for streaming storage systems\n",
+    "        - can be used to run batch queries over a time range or to reprocess data in a streaming pipeline"
+   ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data science infrastructure\n",
+    "\n",
+    "<img src=\"https://i.imgur.com/MsOSTo8.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -557,15 +728,22 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.3"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
