--- a/Semester 2/ISM/ISM_Formulas_and_Code1.ipynb
+++ b/Semester 2/ISM/ISM_Formulas_and_Code1.ipynb
@@ -191,7 +191,7 @@
     "\n",
     "## Law of total probability\n",
     "\n",
-    "If $B_1, B_2, ..., B_n$ are mutually exclusive and exhaustive events, then for any event $A$, $$ P(A) = P(A|B_1)P(B_1) + P(A|B_2)P(B_2) + ... + P(A|B_n)P(B_n)$$"
+    "If $A_1, A_2, ..., A_n$ are mutually exclusive and exhaustive events, then for any event $B$, $$ P(B) = P(B|A_1)P(A_1) + P(B|A_2)P(A_2) + ... + P(B|A_n)P(A_n)$$"
    ]
   },
   {
@@ -274,14 +274,16 @@
     "Here, there are two assumptions : bag of words (position doesn't matter) and conditional independence.\n",
     "Then, we pick the most probable class: $$c_{MAP} = \\arg\\max\\limits_{c} P(c)\\prod\\limits_{i=1}^n P(w_i|c)$$\n",
     "Here, $$ P(c_j) = \\frac{docCount(C = c_j)}{N_{doc}} $$ and $$ P(w_i|c_j) = \\frac{wordCount(w_i, C = c_j)}{\\sum\\limits_{w \\in V} wordCount(w, C = c_j)} $$, where $V$ is the vocabulary.\n",
-    "This has a problem of zero probability, so we use Laplace smoothing: $$ P(w_i|c_j) = \\frac{wordCount(w_i, C = c_j) + 1}{\\sum\\limits_{w \\in V} wordCount(w, C = c_j) + |V|} $$\n",
+    "This has a problem of zero probability, so we use Laplace smoothing: $$ P(w_i|c_j) = \\frac{wordCount(w_i, C = c_j) + 1}{\\sum\\limits_{w \\in V} wordCount(w, C = c_j) + |V|} $$ where $|V|$ is the number of distinct words in the dataset.\n",
     "\n",
     "[Example](https://www.fi.muni.cz/~sojka/PV211/p13bayes.pdf):\n",
     "<img src=\"https://i.imgur.com/p3nZUNM.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
     "<img src=\"https://i.imgur.com/kcNsCro.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
     "\n",
-    "Therefore, $$P(C|d_5) = \\frac{3}{4} {(\\frac{3}{7})}^3 \\frac{1}{14} \\frac{1}{14}$$\n",
-    "and $$P(\\bar{C} | d_5) = \\frac{1}{4} {(\\frac{2}{9})}^3 \\frac{2}{9} \\frac{2}{9}$$\n",
+    "Therefore, $$P(C|d_5) = \\frac{3}{4} {(\\frac{3}{7})}^3 \\frac{1}{14} \\frac{1}{14} \\frac{1}{P(d_5)}$$\n",
+    "and $$P(\\bar{C} | d_5) = \\frac{1}{4} {(\\frac{2}{9})}^3 \\frac{2}{9} \\frac{2}{9} \\frac{1}{P(d_5)}$$\n",
+    "\n",
+    "$P(d_5)$ is the same for both classes, so we can ignore it.\n",
     "\n",
     "\n"
    ]
@@ -440,7 +442,7 @@
     "    $$ y = f(x) = \\frac{1}{\\sigma \\sqrt{2\\pi}} e^{-\\frac{1}{2}(\\frac{x - \\mu}{\\sigma})^2}$$\n",
     "    where $\\pi \\approx 3.14159$ and $e \\approx 2.71828$ \n",
     "- Standard normal distribution is the normal distribution with mean $\\mu = 0$ and standard deviation $\\sigma = 1$, denoted by $Z = N(0, 1)$.\n",
-    "    $$ y = f(x) = \\frac{1}{\\sqrt{2\\pi}} e^{-\\frac{1}{2}\\chi^2}$$\n",
+    "    $$ y = f(x) = \\frac{1}{\\sqrt{2\\pi}} e^{-\\frac{1}{2}x^2}$$\n",
     "    - rules for help computing $P(Z)$:\n",
     "      - $P(Z \\leq z) = P(Z < z) + P(Z = z) = P(Z < z)$\n",
     "      - $P(Z \\geq z) = 1 - P(Z < z)$\n",
@@ -615,15 +617,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "====================================================================================================\n",
-    "\n",
-    "Below this is not in the syllabus for Midsem 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Hypothesis testing\n",
     "\n",
     "- The null hypothesis $H_0$ is a statement about the value of a population parameter that is assumed to be true until there is convincing evidence to the contrary (status quo).\n",
@@ -632,6 +625,12 @@
     "- Two conclusions are possible:\n",
     "  - Reject the null hypothesis $H_0$ in favor of the alternative hypothesis $H_a$.\n",
     "  - Do not reject the null hypothesis $H_0$.\n",
+    "\n",
+    "### Errors in hypothesis testing\n",
+    "|  | $H_0$ is true | $H_0$ is false |\n",
+    "| --- | --- | --- |\n",
+    "| Reject $H_0$ | Type I error | Correct decision |\n",
+    "| Do not reject $H_0$ | Correct decision | Type II error |\n",
     "\n",
     "## Logic of hypothesis testing\n",
     "\n",
@@ -662,7 +661,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparing two populations\n",
+    "## Comparing two populations\n",
     "\n",
     "Consider two populations:\n",
     "1. Population 1 with mean $\\mu_1$ and standard deviation $\\sigma_1$, sampling we get a sample of size $n_1$ with sample mean $\\bar{x}_1$ and sample standard deviation $s_1$\n",
@@ -672,12 +671,12 @@
     "\n",
     "Samples from two distinct populations are independent if each one is drawn without reference to the other, and has no connection with the other.\n",
     "\n",
-    "## 100(1 - $\\alpha$)% confidence interval for $\\mu_1 - \\mu_2$ for large samples\n",
+    "### 100(1 - $\\alpha$)% confidence interval for $\\mu_1 - \\mu_2$ for large samples\n",
     "- A point estimate for the difference in two population means is simply the difference in the corresponding sample means.\n",
     "- A confidence interval for the difference in two population means is computed using a formula in the same fashion as was done for a single population mean.\n",
     "$$ (\\bar{x}_1 - \\bar{x}_2) \\pm z_{\\alpha/2} \\sqrt{\\frac{s_1^2}{n_1} + \\frac{s_2^2}{n_2}}$$\n",
     "\n",
-    "## Hypothesis testing for $\\mu_1 - \\mu_2$ for large samples\n",
+    "### Hypothesis testing for $\\mu_1 - \\mu_2$ for large samples\n",
     "The same five-step procedure used to test hypotheses concerning a single population mean is used to test hypotheses concerning the difference between two population means. The only difference is in the formula for the standardized test statistic.\n",
     "\n",
     "$$ H_0: \\mu_1 - \\mu_2 = D_0$$\n",
@@ -687,13 +686,13 @@
     "$$ Z = \\frac{(\\bar{x}_1 - \\bar{x}_2) - D_0}{\\sqrt{\\frac{s_1^2}{n_1} + \\frac{s_2^2}{n_2}}}$$\n",
     "The samples must be independent and the population distributions must be normal or the sample sizes must be large.\n",
     "\n",
-    "## 100(1 - $\\alpha$)% confidence interval for $\\mu_1 - \\mu_2$ for small samples\n",
+    "### 100(1 - $\\alpha$)% confidence interval for $\\mu_1 - \\mu_2$ for small samples\n",
     "$$ (\\bar{x}_1 - \\bar{x}_2) \\pm t_{\\alpha/2} \\sqrt{s_p^2 \\left( \\frac{1}{n_1} + \\frac{1}{n_2} \\right)}$$\n",
     "where $s_p^2$ is the pooled sample variance, defined as\n",
     "$$ s_p^2 = \\frac{(n_1 - 1)s_1^2 + (n_2 - 1)s_2^2}{n_1 + n_2 - 2}$$\n",
     "and the number of degrees of freedom is $n_1 + n_2 - 2$.\n",
     "\n",
-    "## Hypothesis testing for $\\mu_1 - \\mu_2$ for small samples\n",
+    "### Hypothesis testing for $\\mu_1 - \\mu_2$ for small samples\n",
     "$$ T = \\frac{(\\bar{x}_1 - \\bar{x}_2) - D_0}{s_p^2 \\sqrt{\\frac{1}{n_1} + \\frac{1}{n_2}}}$$\n",
     "The test statistic has Student's t distribution with $n_1 + n_2 - 2$ degrees of freedom.\n"
    ]
@@ -702,10 +701,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression and correlation\n",
+    "## Regression and correlation\n",
     "Two variables $x$ and $y$ have a deterministic linear relationship if points plotted from $(x, y)$ pairs lie exactly along a single straight line. In practice it is common for two variables to exhibit a relationship that is close to linear but which contains an element, possibly large, of randomness.\n",
     "\n",
-    "## Linear correlation coefficient\n",
+    "### Covariance\n",
+    "The covariance of two variables $x$ and $y$ is a measure of the linear association between the two variables. The covariance is denoted by $S_{xy}$ and is defined by the following formula:\n",
+    "$$ S_{xy} = \\frac{\\sum{(x_i - \\bar{x})(y_i - \\bar{y})}}{n - 1}$$\n",
+    "where $\\bar{x}$ and $\\bar{y}$ are the sample means of the $x$ and $y$ values, respectively.\n",
+    "\n",
+    "If $X_1, X_2, ..., X_n$ are $n$ variables, then the covariance matrix is defined as:\n",
+    "   $$ S = \\begin{bmatrix}\n",
+    "   S_{11} & S_{12} & \\cdots & S_{1n} \\\\\n",
+    "   S_{21} & S_{22} & \\cdots & S_{2n} \\\\\n",
+    "   \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "   S_{n1} & S_{n2} & \\cdots & S_{nn}\n",
+    "   \\end{bmatrix}$$ \n",
+    "where $S_{ij} = S_{ji}$ and $S_{ii} = Var(X_i)$ .\n",
+    "\n",
+    "$S_{xy} = E[(X - \\mu_x)(Y - \\mu_y)] = E[XY] - \\mu_x \\mu_y$\n",
+    "\n",
+    "\n",
+    "### Linear correlation coefficient\n",
     "The linear correlation coefficient is a number computed directly from the data that measures the strength of the linear relationship between the two variables $x$ and $y$. The linear correlation coefficient is denoted by $r$ and is defined by the following formula:\n",
     "$$ r = \\frac{\\sum{(x_i - \\bar{x})(y_i - \\bar{y})}}{\\sqrt{\\sum{(x_i - \\bar{x})^2} \\sum{(y_i - \\bar{y})^2}}} = \\frac{S_{xy}}{\\sqrt{S_{xx}S_{yy}}}$$\n",
     "where $S_{xy}$, $S_{xx}$, and $S_{yy}$ are the sums of squares defined by\n",
@@ -715,7 +731,31 @@
     "1. value of $r$ is always between -1 and 1, inclusive\n",
     "2. sign of $r$ indicates the direction of the linear relationship between $x$ and $y$\n",
     "3. size of $|r|$ indicates the strength of the linear relationship between $x$ and $y$\n",
-    "   - $|r|$ close to 1 indicates a strong linear relationship, $|r|$ close to 0 indicates a weak linear relationship"
+    "   - $|r|$ close to 1 indicates a strong linear relationship, $|r|$ close to 0 indicates a weak linear relationship\n",
+    "\n",
+    "Numerical:\n",
+    "|$X$|$Y$|$X - \\bar{X}$|$Y - \\bar{Y}$|$(X - \\bar{X})(Y - \\bar{Y})$|\n",
+    "|---|---|---|---|---|\n",
+    "|...|...|...|...|...|\n",
+    "|$\\sum X$|$\\sum Y$| $\\sum (X - \\bar{X})$ | $\\sum (Y - \\bar{Y})$ | $\\sum (X - \\bar{X})(Y - \\bar{Y})$ |\n",
+    "\n",
+    "### Regression line\n",
+    "\n",
+    "The regression line is the line that best fits the data. The equation of the regression line is\n",
+    "$$ y = a + bx$$\n",
+    "where $a$ is the $y$-intercept and $b$ is the slope of the line.\n",
+    "\n",
+    "For a given set of points, we can find the regression line by minimizing the sum of the squared errors. The sum of the squared errors is defined as\n",
+    "$$ SSE = \\sum{(y_i - \\hat{y}_i)^2}$$\n",
+    "where $y_i$ is the observed value of $y$ and $\\hat{y}_i$ is the predicted value of $y$.\n",
+    "\n",
+    "The regression line is the line that minimizes the sum of the squared errors. The slope and $y$-intercept of the regression line are given by the following formulas:\n",
+    "$$ b = \\frac{S_{xy}}{S_{xx}} = \\frac{\\sum{(x_i - \\bar{x})(y_i - \\bar{y})}}{\\sum{(x_i - \\bar{x})^2}}$$\n",
+    "$$ a = \\bar{y} - b\\bar{x}$$\n",
+    "\n",
+    "### Coefficient of determination\n",
+    "The coefficient of determination is a number computed directly from the data that measures the proportion of the total variation in the $y$ values that is explained by the regression line. The coefficient of determination is denoted by $r^2$ and is defined by the following formula:\n",
+    "$$ r^2 = 1 - \\frac{RSS}{TSS} = 1 - \\frac{\\sum{(y_i - \\hat{y}_i)^2}}{\\sum{(y_i - \\bar{y})^2}}$$"
    ]
   },
   {
@@ -795,8 +835,73 @@
     "\n",
     "Finally we have the F-test statistic, $$F = \\frac{MST}{MSE}$$\n",
     "If the $k$ populations are normally distributed, then $F$ has an F-distribution with $k - 1$ and $n - k$ degrees of freedom.\n",
-    "The test is right tailed, so we reject $H_0$ if $F \\ge F_{k - 1, n - k, \\alpha}$\n",
-    "\n"
+    "The test is right tailed, so we reject $H_0$ if $F \\ge F_{k - 1, n - k, \\alpha}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ANOVA test\n",
+    "\n",
+    "### One-way ANOVA\n",
+    "- ANOVA stands for analysis of variance, and is a generalization of the F-test for equality of means of several populations.\n",
+    "- ANOVA is used to test the null hypothesis that the means of $k$ populations are equal.\n",
+    "- $k$ is the number of populations, $n$ is the total number of observations, $n_i$ is the number of observations in population $i$, $\\bar{x}_i$ is the sample mean of population $i$, $s_i^2$ is the sample variance of population $i$.\n",
+    "- $df_{treatment} = k - 1$, $df_{error} = n - k$, $df_{total} = n - 1$\n",
+    "\n",
+    "Steps:\n",
+    "1. We take $k$ samples from the $k$ populations of size $n_1, n_2, \\dots, n_k$ and compute the sample means $\\bar{x}_1, \\bar{x}_2, \\dots, \\bar{x}_k$\n",
+    "    - the samples are independent, and the populations are normally distributed\n",
+    "2. Calculate the following quantities:\n",
+    "    - $n = n_1 + n_2 + \\dots + n_k$\n",
+    "    - $$\\bar{x} = \\frac{n_1\\bar{x}_1 + n_2\\bar{x}_2 + \\dots + n_k\\bar{x}_k}{n}$$\n",
+    "3. Calculate the following quantities:\n",
+    "    - Sum of Squares Regression (SSR), $$ SSR = n_1(\\bar{x}_1 - \\bar{x})^2 + n_2(\\bar{x}_2 - \\bar{x})^2 + \\dots + n_k(\\bar{x}_k - \\bar{x})^2 $$\n",
+    "    - Sum of Squares Error (SSE), $$ SSE = \\sum_{i = 1}^{k} SSE_i $$ where $$ SSE_i = \\sum_{j = 1}^{n_i} (x_{ij} - \\bar{x}_i)^2 $$\n",
+    "    - Then we have the Sum of Squares Total (SST), $$ SST = SSR + SSE $$\n",
+    "4. Fill in the ANOVA table:\n",
+    "    | Source of variation | Sum of squares | Degrees of freedom | Mean square | F |\n",
+    "    | --- | --- | --- | --- | --- |\n",
+    "    | Treatment | $SSR$ | $k - 1$ | $MST = \\frac{SSR}{k - 1}$ | $F = \\frac{MST}{MSE}$ |\n",
+    "    | Error | $SSE$ | $n - k$ | $MSE = \\frac{SSE}{n - k}$ | |\n",
+    "    | Total | $SST$ | $n - 1$ | | |\n",
+    "5. If the $k$ populations are normally distributed, then $F$ has an F-distribution with $k - 1$ and $n - k$ degrees of freedom. The critical value is $F_{k - 1, n - k, \\alpha}$, and if $F \\ge F_{k - 1, n - k, \\alpha}$, we reject $H_0$.\n",
+    "\n",
+    "### Two-way ANOVA\n",
+    "\n",
+    "| | 1 | 2 | ... | $m$ | Total $x_{i.}$ | Total $x_{i.}^2$ | \n",
+    "| --- | --- | --- | --- | --- | --- | --- |\n",
+    "| 1 | $x_{11}$ | $x_{12}$ | ... | $x_{1m}$ | $x_{1.}$ | $x_{1.}^2$ |\n",
+    "| 2 | $x_{21}$ | $x_{22}$ | ... | $x_{2m}$ | $x_{2.}$ | $x_{2.}^2$ |\n",
+    "| ... | ... | ... | ... | ... | ... | ... |\n",
+    "| $k$ | $x_{k1}$ | $x_{k2}$ | ... | $x_{km}$ | $x_{k.}$ | $x_{k.}^2$ |\n",
+    "| Total $x_{.j}$ | $x_{.1}$ | $x_{.2}$ | ... | $x_{.m}$ | G | |\n",
+    "| Total $x_{.j}^2$ | $x_{.1}^2$ | $x_{.2}^2$ | ... | $x_{.m}^2$ | | |\n",
+    "\n",
+    "- $k$ is the number of treatments, $m$ is the number of blocks, $n$ is the total number of observations.\n",
+    "- ANOVA is used to test the null hypothesis that the means of $k$ populations are equal.\n",
+    "- Two way ANOVA is used to test the null hypothesis that the means of $k$ populations are equal, but the populations are divided into groups based on a factor.\n",
+    "- Two pairs of hypotheses:\n",
+    "    - $H_{01}$: There is no significant difference in the means of different groups\n",
+    "    - $H_{02}$: There is no significant difference in the means of different blocks\n",
+    "    - $H_{11}$: Atleast one pair of means of different groups is significantly different\n",
+    "    - $H_{12}$: Atleast one pair of means of different blocks is significantly different\n",
+    "\n",
+    "Steps:\n",
+    "1. Find the correction factor $$ CF = \\frac{(\\sum_{j = 1}^{m} \\sum_{i = 1}^{n} x_{ij})^2}{n} $$\n",
+    "2. Find the total sum of squares $$ TSS = \\sum_{j = 1}^{k} \\sum_{i = 1}^{m} x_{ij}^2 - CF $$\n",
+    "3. Find the sum of squares for treatments $$ SST = \\sum_{j = 1}^{k} \\frac{x_{j.}^2}{m} - CF $$\n",
+    "4. Find the sum of squares for blocks $$ SSB = \\sum_{i = 1}^{m} \\frac{x_{.i}^2}{k} - CF $$\n",
+    "5. Find the sum of squares for error $$ SSE = TSS - SST - SSB $$\n",
+    "6. Anova table (two-way):\n",
+    "    | Source of variation | Sum of squares | Degrees of freedom | Mean square | F |\n",
+    "    | --- | --- | --- | --- | --- |\n",
+    "    | Treatments | $SST$ | $k - 1$ | $MST = \\frac{SST}{k - 1}$ | $F_t = \\frac{MST}{MSE}$ |\n",
+    "    | Blocks | $SSB$ | $m - 1$ | $MSB = \\frac{SSB}{m - 1}$ | $F_b = \\frac{MSB}{MSE}$ |\n",
+    "    | Error | $SSE$ | $(k - 1)(m - 1)$ | $MSE = \\frac{SSE}{(k - 1)(m - 1)}$ | |\n",
+    "    | Total | $TSS$ | $km - 1$ | | |\n",
+    "7. The critical value for $F_t$ is $F_{k - 1, (k - 1)(m - 1), \\alpha}$, and the critical value for $F_b$ is $F_{m - 1, (k - 1)(m - 1), \\alpha}$. If $F_t \\ge F_{k - 1, (k - 1)(m - 1), \\alpha}$ or $F_b \\ge F_{m - 1, (k - 1)(m - 1), \\alpha}$, we reject $H_{01}$ or $H_{02}$ respectively."
    ]
   }
  ],
