--- a/Semester 2/ML/ML_Formulas_and_Code1.ipynb
+++ b/Semester 2/ML/ML_Formulas_and_Code1.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -487,8 +486,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "## Logistic Regression\n",
     "- transforms the output of a linear regression model into a probability by applying the logistic function (sigmoid function) $$ \\sigma(z) = \\frac{1}{1 + e^{-z}} $$\n",
     "- the output of the logistic function is interpreted as the probability of the input belonging to the positive class, $$ h_{\\theta}(x) = P(y = 1 \\mid x) = \\sigma(\\theta^Tx) = \\frac{1}{1 + e^{-\\theta^Tx}} $$\n",
@@ -617,7 +614,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -632,8 +629,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.3"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
