Sem 3 NLP, SPA initial

--- a/Semester 3/BDS/BDS_Notes.ipynb
+++ b/Semester 3/BDS/BDS_Notes.ipynb
@@ -103,8 +103,8 @@
     "- average access time of any memory access: $t_{avg} = h*t_{cache} + (1-h)*t_{memory}$\n",
     "    - $t_{cache}$ - access time of cache\n",
     "    - $t_{memory}$\n",
-    "- time required to access main memory block = $\\text{block_size} * t_{memory}$\n",
-    "- time required to update cache block = $\\text{cache_block_size} * t_{cache}$\n",
+    "- time required to access main memory block = $\\text{block\\_size} * t_{memory}$\n",
+    "- time required to update cache block = $\\text{cache\\_block\\_size} * t_{cache}$\n",
     "\n",
     "\n",
     "\n",
